# weisshorn-marine-flow

./: .dockerignore  .gitignore  .prefectignore  Dockerfile  Makefile  README.md  poetry-hacks.sh  pyproject.toml
.github/workflows/: ci.yml
flows/: agent_script.sh  flow.py  pipeline.py  pipeline_etl.py  pipeline_ml.py  requirements.txt
marine-flow/: Makefile  README.md  pyproject.toml
marine-flow/src/marine_flow/: flow.py
src/marine_flow/: flow.py  pipeline.py
src/marine_flow/data/: api.py
src/marine_flow/models/: gp_reg_singletask.py
